--- a/Courseline/bin/AndroidManifest.xml
+++ b/Courseline/bin/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.courseline"
+    package="deccan.courseline"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -14,13 +14,37 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.example.courseline.MainActivity"
+            android:name="deccan.courseline.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="deccan.courseline.RegisterActivity"
+            android:label="@string/title_activity_register" >
+        </activity>
+        <activity
+            android:name="deccan.courseline.SearchActivity"
+            android:label="@string/title_activity_search" >
+        </activity>
+        <activity
+            android:name="deccan.courseline.AdditionActivity"
+            android:label="@string/title_activity_addition" >
+        </activity>
+        <activity
+            android:name="deccan.courseline.DeletionActivity"
+            android:label="@string/title_activity_deletion" >
+        </activity>
+        <activity
+            android:name="deccan.courseline.HomeActivity"
+            android:label="@string/title_activity_home" >
+        </activity>
+        <activity
+            android:name="deccan.courseline.SubjectActivity"
+            android:label="@string/title_activity_subject" >
         </activity>
     </application>
 
