--- a/Courseline/.classpath
+++ b/Courseline/.classpath
@@ -7,6 +7,6 @@
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
-	<classpathentry exported="true" kind="lib" path="C:/Users/SMEDIKERI/Downloads/achartengine-1.1.0-demo-source/libs/achartengine-1.1.0.jar"/>
+	<classpathentry kind="lib" path="achartengine-1.1.0.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
