--- a/Courseline/AndroidManifest.xml
+++ b/Courseline/AndroidManifest.xml
@@ -64,6 +64,10 @@
             android:name="deccan.courseline.NotesActivity"
             android:label="@string/title_activity_notes" >
         </activity>
+        <activity
+            android:name="deccan.courseline.ImageActivity"
+            android:label="@string/title_activity_image" >
+        </activity>
     </application>
 
 </manifest>
